<resources>
    <string name="app_name">Kilojoule Counter</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_entry">Kilojoule Counter</string>
    <string name="breakfastName">Breakfast</string>
    <string name="lunchName">Lunch</string>
    <string name="dinnerName">Dinner</string>
    <string name="foodName">Food</string>
    <string name="snacksName">Snacks</string>
    <string name="exerciseName">Exercise</string>
    <string name="weightliftingName">Weightlifting</string>
    <string name="cardioName">Cardio</string>
    <string name="mixedName">Mixed</string>
    <string name="NKIName">Net Kilojoule Intake</string>
    <string name="totalName">Total</string>
    <string name="plusText">+</string>
    <string name="equalsText">=</string>
    <string name="zeroText">0</string>
    <string name="kjText">kJ</string>
    <string name="saveText">Save</string>
    <string name="avgNKI">Average NKI</string>
    <string name="editText">Edit</string>
    <string name="overviewText">Overview</string>
    <string name="minusText">-</string>
    <string name="nextText">Next</string>
    <string name="previousText">Previous</string>
</resources>
