<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EntryActivity"
    tools:showIn="@layout/activity_entry">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:drawableRight="@drawable/ic_navigate_next_black_24dp"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:drawableLeft="@drawable/ic_navigate_before_black_24dp"
        android:text="Previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="597dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/foodNameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="10dp"
            android:text="@string/foodName"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/breakfastNameView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:gravity="center|start"
                android:text="@string/breakfastName"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/breakfastValueView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="3"
                android:gravity="center|start"
                android:text="TextView"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lunchNameView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:gravity="center|start"
                android:text="@string/lunchName"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lunchValueView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="3"
                android:gravity="center|start"
                android:text="TextView"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dinnerNameView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:gravity="center|start"
                android:text="@string/dinnerName"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dinnerValueView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="3"
                android:gravity="center|start"
                android:text="TextView"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/snacksNameView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:gravity="center|start"
                android:text="@string/snacksName"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/snacksValueView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="3"
                android:gravity="center|start"
                android:text="TextView"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/foodTotalValueView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="3"
                android:gravity="center|start"
                android:text="TextView"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/exerciseValueView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exerciseName"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/weightliftingNameView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:gravity="center|start"
                android:text="@string/weightliftingName"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/weightliftingValueView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="3"
                android:gravity="center|start"
                android:text="TextView"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cadioNameView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:gravity="center|start"
                android:text="@string/cardioName"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cardioValueView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="3"
                android:gravity="center|start"
                android:text="TextView"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mixedNameView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:gravity="center|start"
                android:text="@string/mixedName"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mixedValueView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="3"
                android:gravity="center|start"
                android:text="TextView"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/exerciseTotalValueView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="3"
                android:gravity="center|start"
                android:text="TextView"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/NKINameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NKIName"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/foodName"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Space
                android:layout_width="0"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/exerciseName"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/totalName"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/plusText"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/equalsText"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/black" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>